Fixed bug with horizontal scroll

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -6,6 +6,10 @@ body {
   font-family: Gilroy;
 }
 
+#__nuxt {
+  overflow-x: hidden;
+}
+
 .text-block {
   padding: 15.8px 0;
 }
